[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpci-head-rsd"
version = "0.1.0"
description = "MPC-in-the-Head ZK proof for Rank Syndrome Decoding via Mixed-Field Secret Sharing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["cryptography", "zero-knowledge", "MPC-in-the-Head", "rank-syndrome-decoding", "post-quantum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []   # pure Python, stdlib only

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
mpci-demo = "demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["src/mpci_head"]
